fix proposal progress bar misalignment

--- a/core/static/css/style.css
+++ b/core/static/css/style.css
@@ -283,7 +283,6 @@ body {
 }
 #proposal-progress-bar-count {
     width: 100%;
-    margin-bottom: 25px;
 }
 #proposal-progress-bar-count-for {
     color: #6cad4d;
